resolved fdo#79957 propagate ForceArray through jump tokens

ForceArray parameters weren't propagated and enforced to array arguments
on svJump tokens (FormulaJumpToken), namely IF, CHOOSE, IFERROR and
IFNA.

Change-Id: Icf9074f11b826655a52858d778d9a0122d207aa4
(cherry picked from commit c9d037e5e8e5850e9c69372580e7a506b573fc2a)